*gitlab-ce-8.10.1 (26 Jul 2016)

  26 Jul 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.10.1.ebuild,
  -files/gitlab-ce-8.8.1-fix-redis-config-path.patch, -gitlab-ce-8.8.5.ebuild,
  -gitlab-ce-8.9.1.ebuild, -gitlab-ce-8.9.2.ebuild, -gitlab-ce-8.9.3.ebuild,
  -gitlab-ce-8.9.4.ebuild, -gitlab-ce-8.9.5.ebuild:
  www-apps/gitlab-ce:  - added ebuild for gitlab-ce-8.10.1 - deleted all
  versions < 8.9.6 - removed obsolete patch file

*gitlab-ce-8.10.0_rc9 (18 Jul 2016)

  18 Jul 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.10.0_rc9.ebuild,
  -gitlab-ce-8.10.0_rc4.ebuild:
  www-apps/gitlab-ce:  Added ebuild for gitlab-ce-8.10.0_rc9, and removed ebuild
  for gitlab-ce-8.10.0_rc4

*gitlab-ce-8.10.0_rc4 (12 Jul 2016)

  12 Jul 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.10.0_rc4.ebuild,
  gitlab-ce-9999.ebuild:
  www-apps/gitlab-ce: Updated dependency to gitlab-workhorse in gitlab-ce-9999
  to v0.7.8 and added ebuild for gitlab-ce-8.10.0_rc4

*gitlab-ce-8.9.6 (11 Jul 2016)

  11 Jul 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.9.6.ebuild:
  www-apps/gitlab-ce:  added ebuild for version 8.9.6

  09 Jul 2016; Manuel Friedli <manuel@fritteli.ch> gitlab-ce-9999.ebuild:
  www-apps/gitlab-ce:  updated dependencies to gitlab-shell and gitlab-workhorse
  for gitlab-ce-9999

  09 Jul 2016; Manuel Friedli <manuel@fritteli.ch> gitlab-ce-8.9.1.ebuild,
  gitlab-ce-8.9.2.ebuild, gitlab-ce-8.9.3.ebuild, gitlab-ce-8.9.4.ebuild,
  gitlab-ce-8.9.5.ebuild:
  www-apps/gitlab-ce:  fixed dependency on dev-vcs/gitlab-shell for all 8.9*
  ebuilds (need =dev-vcs/gitlab-shell-3.0*, not >=dev-vcs/gitlab-shell-3.0.0)

*gitlab-ce-8.9.5 (09 Jul 2016)

  09 Jul 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.9.5.ebuild:
  www-apps/gitlab-ce:  Added ebuild for gitlab-8.9.5. It contains a security fix
  for CVE-2012-6684

*gitlab-ce-8.9.4 (05 Jul 2016)

  05 Jul 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.9.4.ebuild: