@@ -11,8 +11,8 @@ DIST gitlab-ce-8.10.0_rc9.tar.gz 20704170 SHA256 6f072d72b21d11c1cf8355213afe696
 DIST gitlab-ce-8.10.1.tar.gz 21035550 SHA256 8fe9c994b87f4ef819b14c8149b07a594a8f624285e6f80f888a63978b3c9ef8 SHA512 00d762c65d24cdebe05b3a31e9577500f437c0c64711c121b3967a9ebf3f711dc94cf08e8cc3fe1a3919236acce019e149ce1c64dd8ad0f43d9f298b9d76a167 WHIRLPOOL c3bfe435b8018c0488e760d115c6a290a13f8eaebd900201a807a386a62a0aeace04e4e7daa24f500347676b5aab760efbcbb1daf252aaefd6a73033b382a4fb
 DIST gitlab-ce-8.9.6.tar.gz 21555571 SHA256 1b357ed1157a2a20b647004f588b67d72416df805a385fa7b605905bafb26f55 SHA512 d4693cdc80fff44e2f2d2e640163337b153ee08fbd12cefd055c8a595e1487010f7c0db39a11056577d331d3a76cc7da9936139199aad324d9c324395f684f9a WHIRLPOOL 00474d385cd9b574bbef0847f80613253f4543c54b356ab654b0ca3e7233e056efbe995a9de3e418c68d482d4a2b9b0cf676941c7013755bd795bfe83c9766aa
 EBUILD gitlab-ce-8.10.0_rc9.ebuild 12391 SHA256 a73a04d2d82338674f601b9cbce505e7aa591723937b9110d759d2f4c785adbc SHA512 19acc92cf9a59c1498ae07fc0f1635d35aa6f37b61e86c5eeddae68ec96dc8120f5a1bf66aa44c0f41ea48de0ab2dff91ce0d1eb19b47d8aab66c5118ccb23e4 WHIRLPOOL 9678d325b6690602af31a085c59de62ef20dc7919479c8ff297af9cf04f149b32936e1a2019b4d6f2d2b035af870e81a5cd0d510fa67c42b20bbb07acb46562d
-EBUILD gitlab-ce-8.10.1.ebuild 12414 SHA256 1cbb3143fcbe67a336a7e8bf449b69da29fc36fa145b9883d449260339dce95c SHA512 867bbe83351d6b4641247ee7593e2f67d9884ff09f04f887b1a9e9f349f8424d12818ca58b93a27f6c00bdaa23bf6f33db5068fa41b76ab2fb25424c4cf86fc4 WHIRLPOOL d871bd7ce56fc31551a1a1b7ba4bcdb6dbcffdccd9319a71993b0d4bfaa96536f4a9560af19b5a7c8a3d2512aebca7b566ec4ca43d7edac87cdfb864fac6d32c
+EBUILD gitlab-ce-8.10.1.ebuild 11676 SHA256 18467061975ce0212ddb08cb12b4d2d9f2da6f7999e9d42dd249d96891326318 SHA512 ee1538902ef35fe4f771211eacd0c7fb81aaa81c4b18049111eead6a5ada19318763165245e3e6d05fd41490e0ee4d30ab6fcc946b35e31e1a3f41b200cc46c9 WHIRLPOOL cfad8b037071a70bedf8095cd29cd27d2c703dc9470f4ee943860716e01e7347e78cd9a6612c44fd749a8cb06d6979376493606ab941266ce732e285dc7e3edc
 EBUILD gitlab-ce-8.9.6.ebuild 12341 SHA256 a46bb7c78639ee411a8c0994847f4f90a89133f2d85e7eb71f76f9f6756e5c25 SHA512 19712bb3ece7873e9dc2a5d471512a553108b95338bd370dab8dfac6695da34ee713d4d106c62de1472eab7e3e953471ad6274f7d646900e7ef2c7521460211b WHIRLPOOL 1cdff895e32079e2bd85863d46a3c6c0f39590e454f7c77d058f7403341ab39adf477005a9c6c417ec7ca527bffedf0ec1ec3b3f64cb242c3b2d3404c41b6e8f
 EBUILD gitlab-ce-9999.ebuild 12344 SHA256 cd17ceba505495a7633f8f106d2adc1ee81b74d2b09f8a83cccb0010600f8005 SHA512 c961866f01e626855cddc928c14c8f4a8aa4285dd04e87d1bc310b02c7617dce73c93e5b670650a86c075c4adcdd6b4c3489feb4c204d0474a8e993f3e000440 WHIRLPOOL 11159c64d381f201fa33941bbe7f549ca368a16ebc7e1087b286a8a375e687073e1c586e02411e4a2b50ca74835bf1e81ca069eedefaee483ac3deb20f51fa05
-MISC ChangeLog 3465 SHA256 035e783222984b2a434b85201e115352cbbbff9e9db3c1901d387323746182ec SHA512 160d961a7e8ec76b78e2a46c66da7077811cfe8c866c8eb0505afd824a5f7413a4c38a2019eab1f5560a2f5fabef91eca6b615ec7b6b89466bfed5cb9ff62938 WHIRLPOOL 6aa7c529f4ce389be7fdb7c59b976e8877d23f9dbfc30dfb211336950a7b5406a62a27ec1c3d791e14fd020cfabb60e671338289763c37b40f863b699df407ff
+MISC ChangeLog 3605 SHA256 f3edf3958fb420b68dd776852e03a23aa20b3a16d0271b0b8813c4fbf6fdfd08 SHA512 e430b335f11a3baf0e1e5f3133bda54338c0a0fc26041829b4eba69ff910db40b616224a215436c9370ef6ad9a6c9470a9859b718097bfa1d3e7d342f53d3f74 WHIRLPOOL 246b3f70d27d68023f97d0983841b1172966ac3635b4e23747c250853ab1dcbb2215cb9d1242fe303e58ee4e2b8b8dadb6f2ccc640838f3e130ac42ed274aee3
 MISC metadata.xml 545 SHA256 1b7fc44d811e1ab7638fe4a40253f49d5f1071872d3020c22c4f67662750cb2f SHA512 86f47d297892bccfefa087d93936296f5647993a9ec8e3f47907a6859cbf385e5bc6f00502d7836c9e8d9efef2b6725bf145b0150924c2082b2bd164469ef6ea WHIRLPOOL 6bfb8a55684d68c8bfa6e025a0be965f7b815394ee0896dd2a13cfb524e3cf3f3149acc9072897e30a1842060389576aac07ea8beb4a8b0bfc3e8eab3723f2a1
